@@ -5,6 +5,7 @@ Release announcements
 .. toctree::
    :maxdepth: 2
 
+   release-2.3.1
    release-2.3.0
    release-2.2.4
    release-2.2.2
